<resources>
    <string name="app_name">Bibliothecando o Mundo</string>

    <string name="title_company_name">Bibliothecando o Mundo</string>
    <string name="title_address">- Endereço (link):</string>
    <string name="title_about">- Sobre</string>
    <string name="title_timetable">- Horário:</string>
    <string name="title_obs">- OBS:</string>

    <string name="msg_address_facebook">Facebook: /bibliothecandoomundo</string>
    <string name="msg_address_instagram">Instagram: /bibliothecandoomundo</string>
    <string name="msg_description">O Bibliothecando o Mundo foi criado por 4 alunos de biblioteconomia da PUC Campinas, que só querem levar a palavra da biblioteconomia para o mundo!! Venha conhecer e se apaixonar pela Biblio!</string>
    <string name="msg_timetable">10:00 – 19:00</string>
    <string name="msg_obs">Não deixe de seguir a página e conferir as bibliocantadas para descolar aquele(a) crush dos sonhos!</string>
</resources>
